# lily-default-skill

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
assets/: en-US.toml
src/: main.rs
